--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,14 @@ body {
   font-family: "San Francisco Display Medium";
 }
 
-h1 {
-  color: rgba(255, 255, 255);
+h2 {
+  color: rgba(255, 255, 255, 1);
   font-size: 1.25em;
   font-family: "San Francisco Display Medium";
   text-align: center;
 }
 
-h2 {
+h3 {
   color: rgba(19, 25, 64, 1);
   font-size: 1.15em;
   font-family: "San Francisco Display Medium";
@@ -29,15 +29,14 @@ h2 {
   width:375px;
   min-height: 667px;
   min-width: 375px;
-  background-color: rgba(229, 238, 249);
-  overflow-y: auto;
+  background-color: rgba(229, 238, 249, 1);
+  overflow-y: scroll;
   box-shadow:0 0px 4px rgba(0, 0, 0, 0.2);
 }
 
 #app-header {
   width: inherit;
-  position: fixed;
-  background-color: rgba(19, 25, 64);
+  background-color: rgba(19, 25, 64, 1);
   z-index: 99;
 }
 
@@ -45,23 +44,24 @@ h2 {
   height: 20px;
   width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-#status-bar-left {
-  margin-left: 4px;
+.signal {
+  margin-left: 3px;
 }
 
-#status-bar-right {
-  margin-right: 4px;
-}
-
-#time {
+#clock {
+  display: inline;
+  margin: auto;
   text-align: center;
-  position: absolute;
-  width: inherit;
 }
+
+#battery {
+  margin-right: 4px;
+  float: right;
+}
+
 
 #nav-bar {
   height: 53px;
@@ -93,7 +93,7 @@ h2 {
 }
 
 #stop-info {
-  background-color: rgba(255, 255, 255);
+  background-color: rgba(255, 255, 255, 1);
   position: -webkit-sticky; /* Safari */
   position: sticky;
   height: 80px;
@@ -110,19 +110,23 @@ ul li {
   display: inline;
 }
 
-#bus-line-small {
+.bus-line-small-active {
   width: 80px;
   font-size: .65em;
   padding: 3px 8px;
   margin-right: 2px;
   border-radius: 5px;
-  color: rgba(255, 255, 255);
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(1, 131, 253, 1);
 }
 
-#bus-line-small.active {background-color: rgba(1, 131, 253);
-}
-
-#bus-line-small.inactive {
+.bus-line-small-inactive {
+  width: 80px;
+  font-size: .65em;
+  padding: 3px 8px;
+  margin-right: 2px;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 1);
   background-color: rgba(19, 25, 64, 0.3);
 }
 
@@ -134,8 +138,7 @@ ul li {
 
 #bus-arrivals {
   position: relative;
-  top: 326px;
-  overflow: inherit;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -143,14 +146,14 @@ ul li {
   background: transparent; /* make scrollbar transparent */
 }
 
-#bus-line-info {
-  background-color: rgba(255, 255, 255);
+.bus-line-info {
+  background-color: rgba(255, 255, 255, 1);
   height: 75px;
   padding: 20px;
   border-bottom: 1px solid rgba(19, 25, 64, .1);
 }
 
-#bus-line-number {
+.bus-line-number {
   font-family: "San Francisco Display Bold";
   font-size: 1.5em;
   text-align: center;
@@ -158,59 +161,82 @@ ul li {
   padding: 6px;
   margin-right: 10px;
   border-radius: 5px;
-  color: rgba(255, 255, 255);
-  background-color: rgba(1, 131, 253);
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(1, 131, 253, 1);
   display: inline-block;
   vertical-align: middle;
 }
 
-#bus-line-number.reroute {
-  background-color: rgba(86, 204, 242);
+.bus-line-number-reroute {
+  font-family: "San Francisco Display Bold";
+  font-size: 1.5em;
+  text-align: center;
+  width: 50px;
+  padding: 6px;
+  margin-right: 10px;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(1, 131, 253, 1);
+  display: inline-block;
+  vertical-align: middle;
+  background-color: rgba(86, 204, 242, 1);
 }
 
-#bus-line-number.inactive {
+.bus-line-number-inactive {
+  font-family: "San Francisco Display Bold";
+  font-size: 1.5em;
+  text-align: center;
+  width: 50px;
+  padding: 6px;
+  margin-right: 10px;
+  border-radius: 5px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(1, 131, 253, 1);
+  display: inline-block;
+  vertical-align: middle;
   background-color: rgba(19, 25, 64, 0.3);
 }
 
-#bus-line-name-direction {
+.bus-line-name-direction {
   display: inline-block;
   vertical-align: middle;
 }
 
-#bus-line-name {
+.bus-line-name {
   font-size: 1.12em;
 }
 
-#bus-line-name.inactive {
+.bus-line-name-inactive {
+  font-size: 1.12em;
   color: rgba(19, 25, 64, 0.6);
 }
 
-#bus-line-direction {
+.bus-line-direction {
   font-size: .9em;
   padding-top: 5px;
   color: rgba(19, 25, 64, 0.5);
 }
 
-#bus-line-eta {
+.bus-line-eta {
   font-family: "San Francisco Display Semibold";
   font-size: 2.2em;
   display: inline-block;
   float: right;
 }
 
-#bus-line-resume-time {
+.bus-line-resume-time {
   text-align: right;
   display: inline-block;
   float: right;
   vertical-align: middle;
 }
 
-#resume-label {
+.resume-label {
   font-size: .85em;
   color: rgba(19, 25, 64, 0.5);
 }
 
-#resume-time {
+.resume-time {
   font-family: "San Francisco Display Semibold";
   font-size: 1.5em;
   color: rgba(19, 25, 64, 0.6);
